<resources>
    <string name="app_name">Minha Lista</string>
    <string name="title_activity_cadastro__lista">Cadastro_Lista</string>
    <string name="adicionar_lista">Adicionar Nova Lista</string>
    <string name="sair">Sair</string>
    <string name="nome">Nome</string>
    <string name="nome_lista">Nome da Lista</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="Atualizar">Atualizar</string>
    <string name="novoItem">Novo Item</string>
    <string name="addItem">Adicione seus Itens</string>
    <string name="checkList">Todos os Itens Comparados</string>
    <string name="quant">Quantidade</string>
    <string name="nomeIt">Nome do Item</string>
    <string name="nprod">Nome do produto</string>
    <string name="valorUni">Valor Unitário</string>
    <string name="quatid">Quantidade</string>
    <string name="valorI">Valor Total</string>
    <string name="real">R$</string>
    <string name="filt0">Filtrar os Itens com valor 0</string>
    <string name="comp">Compartilhar</string>
    <string name="prodComp">O Produto ja está Comprado</string>

</resources>
