<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Item.CadastrarItem">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="631dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_id_lista"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_quant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quant" />

        <EditText
            android:id="@+id/nb_quant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_nome_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nprod" />

        <EditText
            android:id="@+id/et_nome_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nomeIt"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valorUni" />

        <EditText
            android:id="@+id/nb_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/cb_comprado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodComp" />

        <Button
            android:id="@+id/salvar_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>